feat: ゴミ箱バッジのフォントサイズを0.7remに変更
- CSS詳細度の競合を解決するため、セレクタを `.btn-icon .trash-badge` に変更
- フォントサイズを `0.625rem`（実際には上書きされて機能していなかった）から `0.7rem` に更新
- 共通スタイルの `1rem` ではなく、バッジに適した `0.7rem` が確実に適用されるように修正

--- a/src/tabs.css
+++ b/src/tabs.css
@@ -2468,13 +2468,13 @@ body {
 }
 
 /* ゴミ箱バッジ */
-.trash-badge {
+.btn-icon .trash-badge {
   position: absolute;
   top: -4px;
   right: -4px;
   background: var(--danger-color);
   color: white;
-  font-size: 0.625rem;
+  font-size: 0.7rem;
   font-weight: 700;
   min-width: 16px;
   height: 16px;
